[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
alembic = "^1.7.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pyotp = "^2.6.0"
pytest = "^7.1.0"
uvicorn = "^0.17.6"
ovh = "^1.0.0"
boto3 = "^1.21.38"
celery = {extras = ["redis", "pytest"], version = "^5.2.6"}
python-dateutil = "^2.8.2"
SQLAlchemy = {extras = ["asyncpg"], version = "^1.4.35"}
asyncpg = "^0.25.0"
pytest-asyncio = "^0.18.3"
httpx = "^0.22.0"
openpyxl = "^3.0.9"
psycopg2-binary = "^2.9.3"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.941"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
black = "^22.1.0"
types-python-dateutil = "^2.8.10"
types-pytz = "^2021.3.6"
boto3-stubs = {extras = ["essential", "ce"], version = "^1.21.42"}
sqlalchemy2-stubs = "^0.0.2-alpha.22"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
